--- a/SwiftPetProjects/Today/Today/Views/Base.lproj/Main.storyboard
+++ b/SwiftPetProjects/Today/Today/Views/Base.lproj/Main.storyboard
@@ -15,9 +15,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="xzu-Ed-dXA" userLabel="Progress Header View">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UDf-eU-DxK" userLabel="Progress Container View">
+                                    <rect key="frame" x="62" y="62.5" width="290" height="289"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gbx-7f-5od" userLabel="Percent Complete View">
+                                            <rect key="frame" x="0.0" y="143" width="290" height="146"/>
+                                            <color key="backgroundColor" systemColor="systemTealColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="146" id="CdZ-wq-vUN"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="brc-6M-MiF" userLabel="Percent Incomplete View">
+                                            <rect key="frame" x="0.0" y="0.0" width="290" height="143"/>
+                                            <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstItem="Gbx-7f-5od" firstAttribute="leading" secondItem="UDf-eU-DxK" secondAttribute="leading" id="HzR-2C-Xjl"/>
+                                        <constraint firstItem="Gbx-7f-5od" firstAttribute="top" secondItem="brc-6M-MiF" secondAttribute="bottom" id="IFE-H8-gq8"/>
+                                        <constraint firstAttribute="bottom" secondItem="Gbx-7f-5od" secondAttribute="bottom" id="PIB-o1-dMd"/>
+                                        <constraint firstAttribute="trailing" secondItem="Gbx-7f-5od" secondAttribute="trailing" id="b9d-dW-EX1"/>
+                                        <constraint firstAttribute="trailing" secondItem="brc-6M-MiF" secondAttribute="trailing" id="h4S-2Q-lCP"/>
+                                        <constraint firstItem="brc-6M-MiF" firstAttribute="top" secondItem="UDf-eU-DxK" secondAttribute="top" id="nKi-sf-5l7"/>
+                                        <constraint firstAttribute="width" secondItem="UDf-eU-DxK" secondAttribute="height" multiplier="1:1" constant="1" id="wtY-pf-lc8"/>
+                                        <constraint firstItem="brc-6M-MiF" firstAttribute="leading" secondItem="UDf-eU-DxK" secondAttribute="leading" id="x3V-Ka-cfS"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemGreenColor"/>
+                            <constraints>
+                                <constraint firstItem="UDf-eU-DxK" firstAttribute="width" secondItem="xzu-Ed-dXA" secondAttribute="width" multiplier="0.7" id="2wg-Gb-edS"/>
+                                <constraint firstItem="UDf-eU-DxK" firstAttribute="centerX" secondItem="xzu-Ed-dXA" secondAttribute="centerX" id="SP4-6O-RRo"/>
+                                <constraint firstItem="UDf-eU-DxK" firstAttribute="centerY" secondItem="xzu-Ed-dXA" secondAttribute="centerY" id="Z9a-QW-n57"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ReminderListCell" rowHeight="99" id="N8W-5j-atv" customClass="ReminderListCell" customModule="Today" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="24.5" width="414" height="99"/>
+                                <rect key="frame" x="0.0" y="438.5" width="414" height="99"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="N8W-5j-atv" id="thv-f1-SNO">
                                     <rect key="frame" x="0.0" y="0.0" width="384.5" height="99"/>
@@ -96,6 +135,10 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="filterSegmentedControl" destination="bcU-YA-Xwc" id="UD2-RL-TDo"/>
+                        <outlet property="percentCompleteHeightConstraint" destination="CdZ-wq-vUN" id="W8i-YX-DwF"/>
+                        <outlet property="percentCompleteView" destination="Gbx-7f-5od" id="d9t-wC-fKP"/>
+                        <outlet property="percentIncompleteView" destination="brc-6M-MiF" id="nFE-yV-B4m"/>
+                        <outlet property="progressContainerView" destination="UDf-eU-DxK" id="qzF-V5-NkE"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UJK-NO-HGo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -129,14 +172,14 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EditTitleCell" id="x5E-wp-gp7" customClass="EditTitleCell" customModule="Today" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="93" width="414" height="19"/>
+                                <rect key="frame" x="0.0" y="93" width="414" height="19.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="x5E-wp-gp7" id="H7f-SX-kwq">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="19"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="19.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="TextField" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TDS-hq-Wmf">
-                                            <rect key="frame" x="20" y="0.0" width="374" height="19"/>
+                                            <rect key="frame" x="20" y="0.0" width="374" height="19.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
@@ -153,7 +196,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EditDateCell" rowHeight="216" id="Zti-FZ-g70" customClass="EditDateCell" customModule="Today" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="112" width="414" height="216"/>
+                                <rect key="frame" x="0.0" y="112.5" width="414" height="216"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Zti-FZ-g70" id="E0A-1e-DrG">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="216"/>
@@ -175,7 +218,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EditNotesCell" rowHeight="216" id="fnz-6s-Tfu" customClass="EditNotesCell" customModule="Today" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="328" width="414" height="216"/>
+                                <rect key="frame" x="0.0" y="328.5" width="414" height="216"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fnz-6s-Tfu" id="jd2-fc-Jcx">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="216"/>
@@ -245,6 +288,15 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
